# stZINC

./: .gitignore  Anchor.toml  LICENSE  README.md
app/: package-lock.json  package.json
app/src/: config.ts
app/src/lib/: adaptor.ts  amount.ts  reads.ts  solana.ts
app/src/scripts/: add-adaptor.ts  deposit-strategy.ts  harvest-fees.ts  init-direct-withdraw.ts  init-strategy.ts  keeper-refresh.ts  read-fees.ts  read-state.ts  set-zero-fees.ts  stake-all-idle.ts  user-deposit.ts  user-direct-withdraw.ts  withdraw-strategy.ts
files/: stZINC.json
keeper/: .gitignore  README.md  keeper.env.example  keeper.mjs  keeper.sh  package.json
programs/zinc_stake_adaptor/: Cargo.toml
programs/zinc_stake_adaptor/src/: constants.rs  error.rs  lib.rs  zinc.rs
programs/zinc_stake_adaptor/src/instructions/: deposit.rs  initialize.rs  withdraw.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  config.ts  main.tsx  voltr.ts
